--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-project-2022",
   "version": "0.1.0",
-  "homepage": "https://samsritha63.github.io/portfolio/",
+  "homepage": "https://samsritha63.github.io/portfolio-website/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
